--- a/style.css
+++ b/style.css
@@ -14,14 +14,12 @@
 }
 
 body {
-    padding-bottom: 1000px;
     background-image: url(Bg.jpg);
-    width: 100%;
+    margin: 0px;
 }
 
 /*layout*/
 .base {
-    width: 100%;
     margin: 0px;
     margin-top: 1%;
     display: flex;
@@ -116,10 +114,16 @@ ul li {
 .contacts {
     border: 5px outset rgb(46, 45, 45);
     border-radius: 10px;
-    padding: 30px;
     backdrop-filter: blur(20px);
+    padding: 5% 5% 3% 5%;
     margin: 10% 50px 10% 50px;
     animation: fifth 1.3s ease-in-out;
+}
+.conatcs div{
+    display: inline;
+}
+.contacts .p{
+    margin: 0px 0px 5% -2%;
 }
 
 
@@ -367,17 +371,16 @@ a:link {
 /*contacts img design*/
 .container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50px 100px;
     align-items: center;
+    gap: 30px;
 }
 
 .contacts img {
     height: 60px;
-    margin: 0px 30px 30px 0px;
 }
 
 .coms p {
-    margin: 0px 700px 30px 0px;
     border: none;
     background: none;
     padding: 10px 18px;
