--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ ul li {
 
 .logo {
     position: fixed;
-    height: 120px;
-    width: 120px;
+    height: max-height(20%);
+    width: 10%;
     top: 20px;
     left: 20px;
     z-index: 1;
